z-index seems to prevent canvas from receiving events

--- a/octoprint_slicer/static/css/slicer.css
+++ b/octoprint_slicer/static/css/slicer.css
@@ -14,7 +14,6 @@
 
 #slicer-viewport {
     margin-bottom: -5px;
-    z-index: -1;
     position: relative;
 }
 
